--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Bajoterra</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav>
+        <h1>Your Name's Amazing Website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </nav>
+
+      <main>
+        <!-- Sidebar section -->
+        <div class="sidebar">
+          <img
+            class="sidebar-img"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSccM7N1EbULNO9vduQiWTw8Z8q_t9FjeXkvQ&s"
+          />
+        </div>
+        <!-- Content section -->
+        <div class="content">
+          <h2>David Guardado</h2>
+          <p>Student at Bonnabel</p>
+          <div id="interests">
+            <h3>interests</h3>
+            <ul>
+              <li>bajoterra</li>
+              <li>eli shane</li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
